<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string
      name="app_name">Mileage Tracker</string>
   <string
      name="odo_label">Odometer Reading:</string>
   <string
      name="trip_label">Trip Reading:</string>
   <string
      name="price_label">Price per gallon:</string>
   <string
      name="gallons_label">Number of Gallons:</string>
   <string
      name="comp_mileage_label">Computer Mileage:</string>
   <string
      name="gas_station_label">Gas Station:</string>
   <string
      name="date_label">Fillup Date:</string>
   <string
      name="actual_mileage_label">Actual Mileage:</string>
   <string
      name="total_price_label">Total Price:</string>
   <string
      name="mpg_diff_label">MPG Difference:</string>
   <string
      name="new_record_title">Add Record</string>
   <string
      name="edit_record_title">Edit Record</string>
   <string
      name="initDb">CREATE TABLE mileageInfo (_id INTEGER PRIMARY KEY
      AUTOINCREMENT, carName TEXT, date INTEGER, station TEXT, odometer
      DOUBLE, trip DOUBLE, gallons, DOUBLE, price DOUBLE, compMileage
      DOUBLE, actMileage DOUBLE, totalPrice DOUBLE, mileageDiff DOUBLE);</string>
   <string
       name="initProfileTable">
       CREATE TABLE mileageProfiles (_id INTEGER PRIMARY KEY AUTOINCREMENT, carName TEXT);</string>
   <string
      name="upgradeDBfrom3To4">ALTER TABLE mileageInfo ADD COLUMN carName TEXT;</string>
   <string
      name="clearDb">DROP TABLE mileageInfo;DROP TABLE mileageProfiles</string>
   <string
      name="confirm_delete">Delete the following records?</string>
   <string
      name="confirm_move">Move the following records?</string>
   <string
      name="confirm_import">Import</string>
   <string
      name="confirm_export">Export</string>

   <!-- Preferences strings -->
   <string
      name="carSelection">carSelection</string>
   <string
       name="editProfilePreferenceTitle">Edit Profiles</string>
   <string
       name="add_profile_text">Add Profile</string>
   <string
      name="unitSelection">unitSelection</string>
   <string name="chart1Selection">chart1Selection</string>
   <string name="chart2Selection">chart2Selection</string>
   <string name="chart3Selection">chart3Selection</string>
   <string name="deselectButton">Deselect</string>
   <string name="deleteButton">Delete</string>
   <string name="submitButton">Submit Modifications</string>
   <string name="averageEcoLabel">Average economy: </string>
   <string name="unknownValue">\??</string>
</resources>