<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff000000"
    android:id="@+id/root"
    >
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
>
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="300dp"
	    android:layout_height="wrap_content"
	    android:background="#80000000"
	>
   		<LinearLayout
		   	android:orientation="horizontal"
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content">
		    <TextView
			    android:layout_width="125dp"
			    android:layout_height="wrap_content"
		   		android:text="@string/odo_label"
		  		/>
		   	<EditText
			    android:layout_width="125dp"
		   		android:layout_height="wrap_content"
		   		android:inputType="numberDecimal"
		   		android:id="@+id/odo_reading"
			/>
   		</LinearLayout>
	   	<LinearLayout
		   	android:orientation="horizontal"
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content">
		    <TextView
		    	android:layout_width="125dp"
		   		android:layout_height="wrap_content"
		    	android:text="@string/trip_label"
		   	/>
		    <EditText
			    android:layout_width="125dp"
		   		android:layout_height="wrap_content"
		   		android:inputType="numberDecimal"
			    android:id="@+id/trip_reading"
		   	/>
	   	</LinearLayout>
	   	<LinearLayout
		   	android:orientation="horizontal"
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content">
		    <TextView
		    	android:layout_width="125dp"
		   		android:layout_height="wrap_content"
		    	android:text="@string/price_label"
		    />
		    <EditText
			    android:layout_width="125dp"
		   		android:layout_height="wrap_content"
		   		android:inputType="numberDecimal"
			    android:id="@+id/price_reading"
		    />
	   	</LinearLayout>
	   	<LinearLayout
		   	android:orientation="horizontal"
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content">
		    <TextView
		    	android:layout_width="125dp"
		   		android:layout_height="wrap_content"
		    	android:text="@string/gallons_label"
		    />
		    <EditText
			    android:layout_width="125dp"
		   		android:layout_height="wrap_content"
		   		android:inputType="numberDecimal"
			    android:id="@+id/gallons_reading"
		    />
   		</LinearLayout>
   		<LinearLayout
		   	android:orientation="horizontal"
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content">
		    <TextView
		    	android:layout_width="125dp"
		   		android:layout_height="wrap_content"
		    	android:text="@string/comp_mileage_label"
		    />
		    <EditText
			    android:layout_width="125dp"
		   		android:layout_height="wrap_content"
		   		android:inputType="numberDecimal"
			    android:id="@+id/comp_mileage_reading"
		    />
	   	</LinearLayout>
   		<LinearLayout
		   	android:orientation="horizontal"
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content">
		    <TextView
		    	android:layout_width="125dp"
		   		android:layout_height="wrap_content"
		    	android:text="@string/gas_station_label"
		    />
		    <AutoCompleteTextView
			    android:layout_width="125dp"
		   		android:layout_height="wrap_content"
			    android:id="@+id/gas_station_reading"
			    android:completionThreshold="1"
		    />
	   	</LinearLayout>
	   	<LinearLayout
	   		android:orientation="horizontal"
	   		android:layout_width="wrap_content"
	   		android:layout_height="wrap_content">
	   		<TextView
	   			android:layout_width="125dp"
	   			android:layout_height="wrap_content"
	   			android:text="@string/date_label"
   			/>
<!--this is the place where the date is entered. Once the text field is clicked
	on, a datePicker dialog box will show up, where the user can change the date.
	the default date will be the current date (encoded, if necessary)-->
			<EditText
   				android:layout_width="125dp"
   				android:layout_height="wrap_content"
   				android:inputType="none|date"
   				android:id="@+id/date_reading"
			/>
   		</LinearLayout>
   		<LinearLayout
		   	android:orientation="horizontal"
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content">
		    <TextView
		    	android:layout_width="125dp"
		   		android:layout_height="wrap_content"
		    	android:text="@string/actual_mileage_label"
		    />
		    <EditText
			    android:layout_width="125dp"
		   		android:layout_height="wrap_content"
			    android:id="@+id/actual_mileage_reading"
			    android:inputType="none|numberDecimal"
   				android:enabled="false"
			    />
	   	</LinearLayout>
   		<LinearLayout
		   	android:orientation="horizontal"
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content">
		    <TextView
		    	android:layout_width="125dp"
		   		android:layout_height="wrap_content"
		    	android:text="@string/total_price_label"
		    />
		    <EditText
			    android:layout_width="125dp"
		   		android:layout_height="wrap_content"
			    android:id="@+id/total_price_reading"
			    android:inputType="none|numberDecimal"
   				android:enabled="false"
			/>
	   	</LinearLayout>
   		<LinearLayout
		   	android:orientation="horizontal"
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content">
		    <TextView
		    	android:layout_width="125dp"
		   		android:layout_height="wrap_content"
		    	android:text="@string/mpg_diff_label"
		    />
		    <EditText
			    android:layout_width="125dp"
		   		android:layout_height="wrap_content"
			    android:id="@+id/mpg_diff_reading"
   				android:inputType="none|numberDecimal"
   				android:enabled="false"
		    />
	   	</LinearLayout>
	   	<Button
		    android:id="@+id/submit"
		    android:text="Submit Modifications"
		    android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		   	android:layout_gravity="center_horizontal"
		/>
	</LinearLayout>
</ScrollView>    

</LinearLayout>